# meson-sample-project

./: meson.build  meson_options.txt
include/: main.h  meson.build
pch/: pch.h
src/: main.cpp  meson.build
tests/bar/: meson.build
tests/foo/: meson.build
